--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,11 @@
     },
     "require": {
         "php": "^7.1",
+        "guzzlehttp/guzzle": "^6.3",
         "roave/security-advisories": "dev-master",
         "twbs/bootstrap": "^4.0",
+        "zendframework/zend-authentication": "^2.6",
+        "zendframework/zend-cache": "^2.8",
         "zendframework/zend-component-installer": "^2.1.1",
         "zendframework/zend-config-aggregator": "^1.0",
         "zendframework/zend-diactoros": "^1.7.1",
@@ -51,14 +54,15 @@
         "zendframework/zend-form": "^2.11",
         "zendframework/zend-i18n": "^2.7",
         "zendframework/zend-servicemanager": "^3.3",
+        "zendframework/zend-session": "^2.8",
         "zendframework/zend-stdlib": "^3.1"
     },
     "require-dev": {
+        "filp/whoops": "^2.1.12",
         "phpunit/phpunit": "^7.0.1",
         "squizlabs/php_codesniffer": "^2.9.1",
         "zendframework/zend-expressive-tooling": "^1.0",
-        "zfcampus/zf-development-mode": "^3.1",
-        "filp/whoops": "^2.1.12"
+        "zfcampus/zf-development-mode": "^3.1"
     },
     "autoload": {
         "psr-4": {
