--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,14 @@
     "require": {
         "php": "^7.1",
         "guzzlehttp/guzzle": "^6.3",
+        "mailgun/mailgun-php": "^2.5",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message": "^1.6",
         "roave/security-advisories": "dev-master",
         "twbs/bootstrap": "^4.0",
         "zendframework/zend-authentication": "^2.6",
         "zendframework/zend-cache": "^2.8",
+        "zendframework/zend-captcha": "^2.8",
         "zendframework/zend-component-installer": "^2.1.1",
         "zendframework/zend-config-aggregator": "^1.0",
         "zendframework/zend-diactoros": "^1.7.1",
@@ -55,7 +59,8 @@
         "zendframework/zend-i18n": "^2.7",
         "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-session": "^2.8",
-        "zendframework/zend-stdlib": "^3.1"
+        "zendframework/zend-stdlib": "^3.1",
+        "zendframework/zendservice-recaptcha": "^3.1"
     },
     "require-dev": {
         "filp/whoops": "^2.1.12",
