--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "require": {
         "php": "^7.1",
         "guzzlehttp/guzzle": "^6.3",
+        "helmich/phpunit-psr7-assert": "^3.1",
         "mailgun/mailgun-php": "^2.5",
         "php-http/guzzle6-adapter": "^1.1",
         "php-http/message": "^1.6",
