--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
         "zendframework/zend-expressive-zendviewrenderer": "^2.0",
         "zendframework/zend-form": "^2.11",
         "zendframework/zend-i18n": "^2.7",
+        "zendframework/zend-psr7bridge": "^1.2",
         "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-session": "^2.8",
         "zendframework/zend-stdlib": "^3.1",
